修改了打包的配置

--- a/pom.xml
+++ b/pom.xml
@@ -8,14 +8,15 @@
         <version>2.1.8.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>cn.enigma.starter</groupId>
+    <groupId>cn.enigma.project</groupId>
     <artifactId>common</artifactId>
-    <version>0.0.19-SNAPSHOT</version>
-    <name>common-spring-boot-starter</name>
-    <description>common-spring-boot-starter</description>
+    <version>0.0.23-SNAPSHOT</version>
+    <name>common</name>
+    <description>common</description>
 
     <properties>
         <java.version>1.8</java.version>
+        <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
     </properties>
 
     <dependencies>
@@ -45,7 +46,17 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+        <!-- trace start -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency>
 
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-sleuth-zipkin</artifactId>
+        </dependency>
+        <!-- trace end -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -71,6 +82,18 @@
             <version>2.8.5</version>
         </dependency>
     </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <plugins>
@@ -100,16 +123,33 @@
                 <configuration>
                     <!-- 需要排除掉不打进 jar 包的文件 -->
                     <excludes>
-                        <exclude>application.yml</exclude>
-                        <exclude>logback-spring.xml</exclude>
-                        <exclude>static/**/*</exclude>
-                        <exclude>static</exclude>
-                        <!-- 排除掉测试 package -->
+                        <exclude>*.yml</exclude>
+                        <exclude>*.xml</exclude>
+                        <!-- 排除掉测试 package 里面的文件 -->
                         <exclude>cn/enigma/project/common/test/**/*</exclude>
                         <exclude>cn/enigma/project/common/test</exclude>
                     </excludes>
                 </configuration>
             </plugin>
         </plugins>
+
+        <!--        <resources>-->
+        <!--            <resource>-->
+        <!--                &lt;!&ndash; 将包里面的 xml 等配置文件一起打包 &ndash;&gt;-->
+        <!--                <directory>src/main/java</directory>-->
+        <!--                <includes>-->
+        <!--                    <include>**/*.properties</include>-->
+        <!--                    <include>**/*.xml</include>-->
+        <!--                </includes>-->
+        <!--            </resource>-->
+        <!--            <resource>-->
+        <!--                &lt;!&ndash; 将包里面的 xml 等配置文件一起打包 &ndash;&gt;-->
+        <!--                <directory>src/main/resources</directory>-->
+        <!--                <includes>-->
+        <!--                    <include>META-INF/*</include>-->
+        <!--                </includes>-->
+        <!--                <filtering>false</filtering>-->
+        <!--            </resource>-->
+        <!--        </resources>-->
     </build>
 </project>
