--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>cn.enigma.project</groupId>
     <artifactId>common</artifactId>
-    <version>0.0.23-SNAPSHOT</version>
+    <version>0.0.24-SNAPSHOT</version>
     <name>common</name>
     <description>common</description>
 
@@ -28,6 +28,17 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-tomcat</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-undertow</artifactId>
         </dependency>
 
         <dependency>
@@ -132,24 +143,5 @@
                 </configuration>
             </plugin>
         </plugins>
-
-        <!--        <resources>-->
-        <!--            <resource>-->
-        <!--                &lt;!&ndash; 将包里面的 xml 等配置文件一起打包 &ndash;&gt;-->
-        <!--                <directory>src/main/java</directory>-->
-        <!--                <includes>-->
-        <!--                    <include>**/*.properties</include>-->
-        <!--                    <include>**/*.xml</include>-->
-        <!--                </includes>-->
-        <!--            </resource>-->
-        <!--            <resource>-->
-        <!--                &lt;!&ndash; 将包里面的 xml 等配置文件一起打包 &ndash;&gt;-->
-        <!--                <directory>src/main/resources</directory>-->
-        <!--                <includes>-->
-        <!--                    <include>META-INF/*</include>-->
-        <!--                </includes>-->
-        <!--                <filtering>false</filtering>-->
-        <!--            </resource>-->
-        <!--        </resources>-->
     </build>
 </project>
