修改trace相关，优化bean注册

--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,7 @@
                         <!-- 排除掉测试 package 里面的文件 -->
                         <exclude>cn/enigma/project/common/test/**/*</exclude>
                         <exclude>cn/enigma/project/common/test</exclude>
+                        <exclude>cn/enigma/project/common/CommonApplication.class</exclude>
                     </excludes>
                 </configuration>
             </plugin>
