修改线程池的配置，优化日志打印。

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,8 @@ cors:
   headers: AccessToken,AuthInfo
 logging:
   path: /Users/luzhihao/tmp/logs
+  level:
+    cn.enigma: debug
 spring:
   application:
     name: project-common
