新增任务缓存功能； 新增打印json格式的日志文件，便于elk展示

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,3 +11,8 @@ logging:
 spring:
   application:
     name: project-common
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
